--- a/MobileApp/app/src/main/res/layout/activity_add_cardapio.xml
+++ b/MobileApp/app/src/main/res/layout/activity_add_cardapio.xml
@@ -4,27 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_cardapio">
+    tools:context="com.rdt.orp.add_cardapio">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="118dp"
-        android:layout_height="57dp"
-        android:layout_marginBottom="28dp"
-        android:onClick="irParaCardapio"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_prato_p"
-        app:layout_constraintVertical_bias="0.949" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="323dp"
         android:layout_height="202dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.411"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -66,17 +55,18 @@
 
     <EditText
         android:id="@+id/textView2"
-        android:layout_width="359dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="375dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="28dp"
         android:background="#00FFFFFF"
         android:backgroundTint="#FFFFFF"
         android:fontFamily="@font/anton"
         android:text="PERSONALIZE O CARDÁPIO DE SEU RESTAURANTE"
-        android:textAlignment="center"
+        android:textAlignment="inherit"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="28sp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,7 +74,7 @@
         android:id="@+id/add_prato"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/email"
         android:backgroundTint="#D1D0CD"
         android:gravity="center_vertical"
@@ -94,7 +84,7 @@
         android:textAlignment="center"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/radioGroup"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintStart_toStartOf="@+id/radioGroup"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         tools:ignore="RtlCompat" />
@@ -103,7 +93,7 @@
         android:id="@+id/add_preco"
         android:layout_width="120dp"
         android:layout_height="54dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/email"
         android:backgroundTint="#D1D0CD"
         android:ems="10"
@@ -119,8 +109,6 @@
         android:id="@+id/btn_add_pratos2"
         android:layout_width="237dp"
         android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="28dp"
         android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
         android:onClick="add_pratos"
@@ -128,7 +116,11 @@
         android:textColor="#ffff99"
         android:textColorHint="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/add_preco"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="@+id/add_preco"
+        app:layout_constraintTop_toBottomOf="@+id/add_preco"
+        app:layout_constraintVertical_bias="0.253" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
