--- a/MobileApp/app/src/main/res/layout/activity_lista.xml
+++ b/MobileApp/app/src/main/res/layout/activity_lista.xml
@@ -4,77 +4,142 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".lista"
+    tools:context="com.rdt.orp.lista"
     android:orientation="horizontal">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-        
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_prato_p_preco"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        app:layout_constraintStart_toEndOf="@+id/list_prato_p"
-        app:layout_constraintTop_toTopOf="@+id/list_prato_p" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/textView4"
-        android:layout_width="166dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="16dp"
-        android:background="#00FFFFFF"
-        android:backgroundTint="#FFFFFF"
-        android:fontFamily="@font/anton"
-        android:text="CARDÁPIO"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="213dp"
+                android:layout_height="wrap_content"
+                android:text="Prato Principal"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/textView4"
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_marginBottom="72dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="irParaAddCardapio"
-        app:layout_constraintTop_toBottomOf="@+id/list_prato_p"
-        app:layout_constraintVertical_bias="0.949" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_prato_p"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layout_constraintStart_toStartOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_prato_p"
-        android:layout_width="199dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            <EditText
+                android:id="@+id/textView4"
+                android:layout_width="166dp"
+                android:layout_height="69dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="60dp"
+                android:background="#00FFFFFF"
+                android:backgroundTint="#FFFFFF"
+                android:fontFamily="@font/anton"
+                android:text="CARDÁPIO"
+                android:textAlignment="inherit"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="40sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="213dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="28dp"
-        android:text="Prato Principal"
-        android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="213dp"
+                android:layout_height="44dp"
+                android:text="Salada"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView5"
+                app:layout_constraintEnd_toEndOf="@+id/textView5"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/list_prato_p"
+                app:layout_constraintVertical_bias="1.0" />
 
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="213dp"
+                android:layout_height="44dp"
+                android:text="Bebidas"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView7"
+                app:layout_constraintEnd_toEndOf="@+id/textView7"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/textView7" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="213dp"
+                android:layout_height="44dp"
+                android:text="Sobremesa"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView6"
+                app:layout_constraintStart_toStartOf="@+id/textView6" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="281dp"
+                android:layout_height="42dp"
+                android:text="Acompanhamento"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/list_prato_p" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#F3D548"
+        android:gravity="bottom|center_horizontal"
+        android:onClick="irParaAddCardapio"
+        android:paddingTop="20dp"
+        android:text="+"
+        android:textAlignment="gravity"
+        android:textColor="@android:color/background_light"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnBluetoothConect2"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#F3D548"
+        android:gravity="center|center_horizontal"
+        android:onClick="irParaPedidos"
+        android:paddingTop="20dp"
+        android:text="Pedidos"
+        android:textColor="@android:color/background_light"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.761"
+        app:layout_constraintStart_toEndOf="@+id/button5" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
