--- a/MobileApp/app/src/main/res/layout/activity_load__logo.xml
+++ b/MobileApp/app/src/main/res/layout/activity_load__logo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Load_Logo">
+    tools:context="com.rdt.orp.Load_Logo">
 
     <ImageView
         android:id="@+id/imageView"
