--- a/MobileApp/app/src/main/res/layout/row.xml
+++ b/MobileApp/app/src/main/res/layout/row.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/nomePrato"
-        android:textSize="28sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingEnd="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:textSize="28sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/precoPrato"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingEnd="5dp"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="@+id/nomePrato"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nomePrato"
+        app:layout_constraintTop_toTopOf="@+id/nomePrato" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
