--- a/MobileApp/app/src/main/res/layout/activity_lista.xml
+++ b/MobileApp/app/src/main/res/layout/activity_lista.xml
@@ -23,6 +23,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_prato_p"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layout_constraintStart_toStartOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="213dp"
@@ -34,14 +42,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_prato_p"
+                android:id="@+id/list_salada"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintStart_toStartOf="@+id/textView9"
+                app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
-            <EditText
+            <TextView
                 android:id="@+id/textView4"
                 android:layout_width="166dp"
                 android:layout_height="69dp"
@@ -58,50 +65,69 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/textView9"
                 android:layout_width="213dp"
                 android:layout_height="44dp"
                 android:text="Salada"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView5"
-                app:layout_constraintEnd_toEndOf="@+id/textView5"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/list_prato_p"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintStart_toStartOf="@+id/list_prato_p"
+                app:layout_constraintTop_toBottomOf="@+id/list_prato_p" />
 
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/textView5"
                 android:layout_width="213dp"
                 android:layout_height="44dp"
                 android:text="Bebidas"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView7"
-                app:layout_constraintEnd_toEndOf="@+id/textView7"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textView7" />
+                app:layout_constraintStart_toStartOf="@+id/list_salada"
+                app:layout_constraintTop_toBottomOf="@+id/list_salada" />
 
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/textView7"
                 android:layout_width="213dp"
                 android:layout_height="44dp"
                 android:text="Sobremesa"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/textView6"
-                app:layout_constraintStart_toStartOf="@+id/textView6" />
+                app:layout_constraintStart_toStartOf="@+id/list_bebidas"
+                app:layout_constraintTop_toBottomOf="@+id/list_bebidas" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="281dp"
                 android:layout_height="42dp"
+                android:layout_marginTop="10dp"
                 android:text="Acompanhamento"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/list_prato_p" />
+                app:layout_constraintStart_toStartOf="@+id/list_sobremesa"
+                app:layout_constraintTop_toBottomOf="@+id/list_sobremesa" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_bebidas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/textView5"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_sobremesa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/textView7"
+                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_acompanha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/textView6"
+                app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -113,14 +139,15 @@
         android:layout_height="70dp"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
-        android:gravity="bottom|center_horizontal"
+
         android:onClick="irParaAddCardapio"
         android:paddingTop="20dp"
-        android:text="+"
-        android:textAlignment="gravity"
+        android:text="Adicionar cardápio"
+
         android:textColor="@android:color/background_light"
-        android:textSize="35sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -129,13 +156,13 @@
         android:layout_width="160dp"
         android:layout_height="70dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/proximo"
         android:backgroundTint="#F3D548"
-        android:gravity="center|center_horizontal"
         android:onClick="irParaPedidos"
         android:paddingTop="20dp"
         android:text="Pedidos"
         android:textColor="@android:color/background_light"
-        android:textSize="15sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.761"
