--- a/MobileApp/app/src/main/res/layout/row.xml
+++ b/MobileApp/app/src/main/res/layout/row.xml
@@ -6,23 +6,26 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="wrap_content"
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
     android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/nomePrato"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:paddingEnd="5dp"
+        android:paddingEnd="50dp"
+        android:paddingRight="20dp"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/precoPrato"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:paddingEnd="5dp"
         android:textSize="28sp"
@@ -31,6 +34,7 @@
         app:layout_constraintStart_toEndOf="@+id/nomePrato"
         app:layout_constraintTop_toTopOf="@+id/nomePrato" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
 
 </LinearLayout>
